Initialize the generateStandardMetadata Maven Profile of all module